srcs/ft_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ft_services
  labels:
    app: ft_services
spec:
  type: NodePort
  ports:
  - port: 80
    name: alpine
    targetPort: 80
    nodePort: 32756
  selector:
  app: nginx
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: alpine
        #imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: extentions/v1beta1
kind: Deployment
metadata:
  name: ftps
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: alpine
        #imagePullPolicy: Always
        ports:
        - containerPort: 21
---
apiVersion: extentions/v1beta1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: alpine
        ports:
        - containerPort: 5050
      - name: mysql
