srcs/nginx_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-service
spec:
  type: NodePort
  ports:
  - port: 80
    name: nginx80
    targetPort: 80
#    nodePort: 32756
  - port: 443
    name: nginx443
    targetPort: 443
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx-image:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 443
